tests/agl/rejections/scope/catch_var_escapes.agl
try
  pass
catch _ as err =>
  pass
print err
